<resources>
    <string name="app_name">TimeToShoot</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="emailpassword_status_fmt">Email User: %1$s</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="signed_out">Signed Out</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify</string>
    <string name="reload">Reload</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="info_icon_description">Opis ikony informacji</string>
    <string name="historia">HISTORIA</string>
    <string name="main">MAIN</string>
</resources>